2004-01-12 Bernhard Held <bernhard@bernhardheld.de>

	* src/SDCCast.c (decorateType): replacing 'ul > 0' by  '!ul' results
	in simpler and even better code

2004-01-11 Bernhard Held <bernhard@bernhardheld.de>

	* src/SDCCicode.c (operandOperation): fixed bug #874819
	* src/SDCCast.c (decorateType): fixed
	char foo (unsigned long ul) { return ul > 0; }

2004-01-11 Frieder Ferlemann <Frieder.Ferlemann@web.de>

	* doc/sdccman.lyx: Moved and added some sections, small changes
	all over. Telling LaTeX to be less strict with word spacing
	to better keep the right margin. Changed some notes about
	maintainance of the ports in section 3.2.1 - is it OK like this?

2004-01-11 Vangelis Rokas <vrokas@otenet.gr>

	SDCC source changes:
	* src/SDCCopt.c (cntToFcall, cnvToFloatCast, cnvFromFloatCast,
	convilong): modified to inform the pic16 port that builtin functions
	are external

	PIC16 PORT specific changes:
	* src/pic16/device.c pic16_dump_equates() added,
	processor registers declared internally by the port are emitted in
	the translation as equates,
	* src/pic16/gen.c: inline code is passed unprocessed to the
	translation,
	* (pic16_popGetLit2): fnuction modified to take second operand as
	pCodeOp pointer and not as literal,
	* (popRegFromIdx): prefixed with pic16_,
	* (pic16_popCombine2): modified to receive already allocated pCode
	operands,
	* (pic16_pushpCodeOpReg, pic16_poppCodeOpReg): added
	* (genFunction): initializes local stack frame and pushes on stack
	all the registers used by this function,
	* (genEndFunction): restores all registers from stack and restores
	stack frame,
	* src/pic16/glue.c (pic16emitRegularMap): various changes and
	improvements,
	* (pic16glue): changed the program startup sequence,
	* added new dbName code 'A' for functions placed in absolute section
	* src/pic16/main.c: added function attribute _naked,
	* added pragma 'code' to place a fnuction at an absolute address,
	* added command line arguments --debug-ralloc and --pcode-verbose,